--- a/_docker/default.conf
+++ b/_docker/default.conf
@@ -2,18 +2,18 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/html/public;
+    root /var/www/html;
 
     index index.php index.html index.htm;
 
-    location /public {
+    location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /var/www/html/public$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME /var/www/html$fastcgi_script_name;
         include fastcgi_params;
     }
 
