--- a/app/composer.json
+++ b/app/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Snipr\\": "src/"
+            "App\\": "src/"
         }
     },
     "authors": [
