--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     container_name: app
     volumes:
-      - ./src:/var/www/html
+      - ./app:/var/www/html
     networks:
       - app-network
     depends_on:
