--- a/app/composer.json
+++ b/app/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "vlucas/phpdotenv": "^5.6",
         "ext-pdo": "*",
-        "ext-memcached": "*"
+        "ext-memcached": "*",
+        "twig/twig": "@stable"
     }
 }
