--- a/app/composer.json
+++ b/app/composer.json
@@ -19,6 +19,7 @@
         "vlucas/phpdotenv": "^5.6",
         "ext-pdo": "*",
         "ext-memcached": "*",
-        "twig/twig": "@stable"
+        "twig/twig": "@stable",
+        "php-di/php-di": "^7.0"
     }
 }
