--- a/app/composer.json
+++ b/app/composer.json
@@ -21,5 +21,8 @@
         "ext-memcached": "*",
         "twig/twig": "@stable",
         "php-di/php-di": "^7.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.1"
     }
 }
